# mab-workshop-materials

./: README.md
docs/assets/: slide-style.css
docs/slides/: mab-workshop-slides.qmd
mabworkshopR/: ts_demo.R
mabworkshoppy/: README.md  binomial_bandit.py  pyproject.toml  ts_demo.py
mabworkshoppy/models/: betabinomial_thompson_sampling.stan
mabworkshoppy/src/mabworkshoppy/: __init__.py  thompson.py
